# somax

./: .gitignore  Makefile  README.md  benchmark_fertility.py  phase2a_qwen3_tts_colab.ipynb  project.md  pyproject.toml  train_eval.ipynb
akan_bpe/: __init__.py  classifier.py  model_integration.py
dual_core/: __init__.py  datasets.py  experiment.py  io.py  metrics.py  tokenizers.py
models/: asr_tokenizer.json  asr_tokenizer_stats.json  mixed_tokenizer.json  mixed_tokenizer_stats.json  router_classifier.pkl  tts_tokenizer.json  tts_tokenizer_stats.json
notebooks/: pipeline.ipynb  train_eval.ipynb
scripts/: benchmark_fertility.py  benchmark_inference.py  download.py  export_gguf.py  model_integration.py  router.py  train_bpe.py  train_lora.py  train_router.py
somax/: tokenizer.py
tests/: conftest.py  test_cli.py  test_experiment.py  test_metrics.py  test_model_integration.py  test_tokenizer.py  test_tokenizers.py
