[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akan-bpe"
version = "0.2.0"
description = "Eliminating the Tokenization Tax for Akan through specialized BPE tokenizers and ML routing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Akan-BPE Team"}
]
keywords = ["nlp", "tokenization", "akan", "twi", "tokenizer", "bpe", "low-resource"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "datasets>=2.18.0",
    "transformers>=4.40.0",
    "tokenizers>=0.15.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["akan_bpe*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
extend-exclude = "train_eval\\.ipynb"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["train_eval.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
